# CineDoc

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  wx_cmake_template.sln  wx_cmake_template_core.vcxproj  wx_cmake_template_core.vcxproj.filters
.metals/: metals.mv.db
src/: CMakeLists.txt  main (FILE IN AND OUT).cpp  main.cpp  mainb.cpp
subprojects/Stamp/wxWidgets_external/: wxWidgets_external-build-Debug.cmake  wxWidgets_external-build-MinSizeRel.cmake  wxWidgets_external-build-RelWithDebInfo.cmake  wxWidgets_external-build-Release.cmake  wxWidgets_external-configure-Debug.cmake  wxWidgets_external-gitinfo.txt  wxWidgets_external-install-Debug.cmake  wxWidgets_external-install-MinSizeRel.cmake  wxWidgets_external-install-RelWithDebInfo.cmake  wxWidgets_external-install-Release.cmake
subprojects/tmp/wxWidgets_external/: wxWidgets_external-cfgcmd.txt  wxWidgets_external-gitclone.cmake
subprojects/tmp/wx_cmake_template_core/: wx_cmake_template_core-cfgcmd.txt
